Added run time to the locust runs.

--- a/locust/templates/index.html
+++ b/locust/templates/index.html
@@ -35,6 +35,10 @@
                     <div class="label">FAILURES</div>
                     <div class="value"><span id="fail_ratio"></span>%</div>
                 </div>
+                <div class="top_box box_run_time box_running" id="box_run_time">
+                    <div class="label">RUN TIME</div>
+                    <div class="value"><span id="run_time"></span>{{ run_time }}</div>
+                </div>
                 <div class="top_box box_stop box_running" id="box_stop">
                     <a href="/stop"><img src="/static/img/stop.png" style="border:0;"></a>
                 </div>
